# tld_triblib

./: CMakeLists.txt  README.md  tribcore.hpp
include/: globals.h  sys_audio.h
include/triblib/base/: scene.h
src/: globals.cpp
src/system/: audio.cpp
src/utils/: animation.cpp  dynamic.cpp  music.cpp  sound.cpp  sprite.cpp  text.cpp
